--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   /* background-color: #2d3436; */
   /* background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%); */
   color: white;
-  background-image: url("./src/assets/images/nubelson-fernandes--Xqckh_XVU4-unsplash.jpg");
+  background-image: url("https://img.freepik.com/free-photo/dark-blue-product-background_53876-92801.jpg?w=1800&t=st=1692263344~exp=1692263944~hmac=693b1b16df45b74a48b10eba0573a4468164a368bcddd28525fd0863cb68ff95");
   background-position: center;
   background-repeat: repeat-y;
   background-size: cover;
